# finvee-vhackusm

./: .env.example  .gitignore  Makefile  README.md  push.sh  pyproject.toml  requirements.txt  retrain_with_ieee_cis.py  setup.bat  setup.sh
agents/: aegis_agents.py
api/: main.py
dashboard/: app.py
data/: generate_data.py
data/dummy/: sample_transactions_template.csv  transactions.csv
ml/: predictor.py  retrain_with_ieee_cis.py  train_models.py
models/: autoencoder_ieee.keras  label_encoders_ieee.pkl  lgb_model.pkl  metadata_ieee.json  scaler_ieee.pkl
models/model-dummy/: autoencoder.keras  label_encoders.pkl  metadata.json  scaler.pkl
utils/: batch_processor.py
