[project]
name = "aegis-sme"
version = "1.0.0"
description = "AEGIS SME — Autonomous Financial Guardian for SMEs | Team Finvee | Varsity Hackathon 2026"
readme = "README.md"
requires-python = ">=3.9,<3.12"
authors = [
    { name = "Team Finvee" }
]

dependencies = [
    # ML Core
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",

    # Deep Learning (Autoencoder)
    "tensorflow>=2.13.0",

    # API Backend
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",

    # Dashboard
    "streamlit>=1.28.0",
    "plotly>=5.17.0",

    # Data I/O
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",

    # Utilities
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
kaggle = [
    "kaggle>=1.5.16",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml", "agents", "api", "dashboard", "utils"]
